--- a/team/src/main/resources/messages.properties
+++ b/team/src/main/resources/messages.properties
@@ -1,27 +1,7 @@
-# Propiedades de catalogo.html
-catalogo.pagina.titulo=Catalogo de productos
+error.login.password=Error: the password entered doesn't match the email's {0}
+error.login.email=Error: the email {0} doesn't exist
+error.register=Error: couldn't register the email {0}, maybe it already exists?
+error.logged.other=Error: you have to be logged to access that page
 
-# Propiedades de index.html
-principal.pagina.titulo=Bienvenido a Food Net
-
-# Propiedades de carro.html
-carro.pagina.titulo=Carro de productos
-
-#Propiedades de modificarDatosUsuario.html
-modificarUsuario.pagina.titulo=Modificar datos de usuario
-
-#Propiedades de finalizarCompra.html
-finalizar.pagina.titulo=Finalizar compra
-
-# Alertas exito
-exito.registro=El usuario {0} ha sido registrado satisfactoriamente
-exito.usuario.modificar=Los campos han sido modificados correctamente
-exito.usuario.borrar=El usuario {0} ha sido borrado satisfactoriamente
-exito.pago=El pedido ha sido realizado satisfactoriamente
-
-#Alertas fallo
-fallo.login.password=Error: la password {0} no es correcta
-fallo.login.email=Error: el email {0} no existe
-fallo.password.cifrar=Error interno al intentar cifrar la password de {0}
-fallo.password.descifrar=Error interno al intentar descifrar la password de {0}
-fallo.interno.sesion=Error interno del sistema con el usuario {0}, por favor vuelva a acceder con sus datos
+success.session.close=Success, the session has been closed correctly
+success.register=Success, you have been registered successfully
