IP & Unique Visitors to Shortener+, improvements to shortener

--- a/team/src/main/resources/messages.properties
+++ b/team/src/main/resources/messages.properties
@@ -1,7 +1,8 @@
-error.login.password=Error: the password entered doesn't match the email's {0}
-error.login.email=Error: the email {0} doesn't exist
-error.register=Error: couldn't register the email {0}, maybe it already exists?
+error.login.password=Error: the password entered doesn''t match the email''s {0}
+error.login.email=Error: the email {0} doesn''t exist
+error.register=Error: couldn''t register the email {0}, maybe it already exists?
 error.logged.other=Error: you have to be logged to access that page
+error.urlshortenerplus.owner=Error: you''re not the owner of that URL and therefore can''t access information about it
 
 success.session.close=Success, the session has been closed correctly
 success.register=Success, you have been registered successfully
