--- a/team/src/main/resources/messages.properties
+++ b/team/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ error.login.email=Error: the email {0} doesn''t exist
 error.register=Error: couldn''t register the email {0}, maybe it already exists?
 error.logged.other=Error: you have to be logged to access that page
 error.urlshortenerplus.owner=Error: you''re not the owner of that URL and therefore can''t access information about it
+error.toomuchrequests = Error: only 1 petition every 10 seconds is allowed!
 
 success.session.close=Success, the session has been closed correctly
 success.register=Success, you have been registered successfully
