Location restrictions with admin user and API

--- a/team/src/main/resources/messages.properties
+++ b/team/src/main/resources/messages.properties
@@ -9,3 +9,5 @@ error.advertisement.url.notfound = Error: you have to access the shortened link 
 
 success.session.close=Success, the session has been closed correctly
 success.register=Success, you have been registered successfully
+success.latitude.update=Success, you have modified the current blocked latitude to {0}
+success.longitude.update=Success, you have modified the current blocked longitude to {0}
